# dsn-facturation

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
dsn_extractor/: __main__.py  block_groups.py  contributions.py  ctp_rates.py  enums.py  extractors.py  models.py  normalize.py  organisms.py  parser.py  urssaf_individual_mapping.py  urssaf_mapping_rules.py
dsn_extractor/data/: complementary_family_overrides.tsv  ctp_rate_reference.tsv  organisms_reference.tsv  urssaf_individual_mapping.tsv
server/: app.py
server/static/: app.js  index.html  style.css
